objects/Opportunity_ScoreCard__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Already_Engaged_with_SEC_Score__c</fullName>
        <formula>( 
Case(TEXT( Already_Engaged_with_SEC__c ), 
&quot;1. Likely to lose to SEC&quot;,1, 
&quot;2. Engagement with SEC hurts GF&quot;, 2, 
&quot;3a. Neutral&quot;,3, 
&quot;3b. Not Engaged with SEC&quot;,3, 
&quot;4. Engagement with SEC helps GF&quot;,4, 
&quot;5. Likely to win because of SEC&quot;,5, 
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Already Engaged with SEC (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Already_Engaged_with_SEC_Weighted_Score__c</fullName>
        <formula>Already_Engaged_with_SEC_Score__c * Already_Engaged_with_SEC_Weighted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Already Engaged with SEC(Weighted Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Already_Engaged_with_SEC_Weighted__c</fullName>
        <formula>5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>5</inlineHelpText>
        <label>Already Engaged with SEC (Weight)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Already_Engaged_with_SEC__c</fullName>
        <inlineHelpText>Situation dependent.  Already familiar with 14LPE =&gt; less support =&gt; favorable.  May need to compete with SEC for business =&gt; unfavorable.  Acc Mgr needs to make judgement.

1= very unfavorable, 3=no effect, 5= favorable</inlineHelpText>
        <label>Already Engaged with SEC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Likely to lose to SEC</fullName>
                </value>
                <value>
                    <fullName>2. Engagement with SEC hurts GF</fullName>
                </value>
                <value>
                    <fullName>3a. Neutral</fullName>
                </value>
                <value>
                    <fullName>3b. Not Engaged with SEC</fullName>
                </value>
                <value>
                    <fullName>4. Engagement with SEC helps GF</fullName>
                </value>
                <value>
                    <fullName>5. Likely to win because of SEC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Service_Level_CSL__c</fullName>
        <formula>TEXT(Opportunity__r.Account.Customer_Service_Level_CSL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Service Level (CSL)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Timeframe_Score__c</fullName>
        <formula>Case(TEXT( Decision_Timeframe__c ),
&quot;1= &gt;120 days&quot;,1,
&quot;2= 91~120 days&quot;,2,
&quot;3= 61~90 days&quot;,3,
&quot;4= 30~60 days&quot;,4,
&quot;5= &lt;30 days&quot;,5,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule/ Urgency (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Timeframe_Weight__c</fullName>
        <formula>8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>8</inlineHelpText>
        <label>Schedule/ Urgency (Weight)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Timeframe_Weighted_Score__c</fullName>
        <formula>Decision_Timeframe_Score__c  * Decision_Timeframe_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule/ Urgency (Weighted Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Timeframe__c</fullName>
        <inlineHelpText>Supplier decision time frame

1= &gt;120days,  2= 91~120 days,  3= 61~90days,  4= 30~60days,  5= &lt;30days</inlineHelpText>
        <label>Schedule/ Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1= &gt;120 days</fullName>
                </value>
                <value>
                    <fullName>2= 91~120 days</fullName>
                </value>
                <value>
                    <fullName>3= 61~90 days</fullName>
                </value>
                <value>
                    <fullName>4= 30~60 days</fullName>
                </value>
                <value>
                    <fullName>5= &lt;30 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Win_Revenue_Score__c</fullName>
        <formula>If(Opportunity__r.Design_Win_Revenue__c&gt;1000000000, 5,
If(Opportunity__r.Design_Win_Revenue__c&gt;500000000,4,
If(Opportunity__r.Design_Win_Revenue__c&gt;250000000,3,
If(Opportunity__r.Design_Win_Revenue__c&gt;100000000,2,
If(Opportunity__r.Design_Win_Revenue__c&gt;0,1,
0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Design Win Revenue (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Win_Revenue_Weight__c</fullName>
        <formula>15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>15</inlineHelpText>
        <label>Design Win Revenue (Weight)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Win_Revenue_Weighted_Score__c</fullName>
        <formula>Design_Win_Revenue_Score__c  * Design_Win_Revenue_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Design Win Revenue (Weighted Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Win_Revenue__c</fullName>
        <formula>Opportunity__r.Design_Win_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>( Derived from Opportunity forecast )  
1:   $100M or less;  
2:   $100M+  to $250M;  
3:   $250+ to $500M; 
4:   $500M+ to $1B;
5:   &gt;$1B</inlineHelpText>
        <label>Design Win Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Resource_Scor__c</fullName>
        <formula>Case(TEXT(Funding_Resource__c),
&quot;1. Start Up&quot;, 1,
&quot;2. Private &lt;$100M&quot;,2,
&quot;3a. Private &lt;$300M&quot;,3,
&quot;3b. Public &gt;$100M&quot;,3,
&quot;4. Public &gt;$500M&quot;,4,
&quot;5. Public &gt;$1B&quot;,5
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding/ Resource (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Resource_Weight__c</fullName>
        <formula>12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>12</inlineHelpText>
        <label>Funding/ Resource (Weight)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Resource_Weighted_Score__c</fullName>
        <formula>Funding_Resource_Scor__c * Funding_Resource_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding/ Resource (Weighted Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Resource__c</fullName>
        <inlineHelpText>Financial strengths &amp; manpower to fund &amp; support high-cost of 14nm designs.

1 = startup, 2 = private &lt;$100M, 3 = private &lt;$300m, or public &gt;$100M, 4 = public &gt;$500M, 5 = public &gt;$1B</inlineHelpText>
        <label>Funding/ Resource</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Start Up</fullName>
                </value>
                <value>
                    <fullName>2. Private &lt;$100M</fullName>
                </value>
                <value>
                    <fullName>3a. Private &lt;$300M</fullName>
                </value>
                <value>
                    <fullName>3b. Public &gt;$100M</fullName>
                </value>
                <value>
                    <fullName>4. Public &gt;$500M</fullName>
                </value>
                <value>
                    <fullName>5. Public &gt;$1B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Match_Score__c</fullName>
        <formula>Case(TEXT( IP_Match__c ),
&quot;1. IPs are not aligned with our current plan/target applications&quot;,1,
&quot;2. Few key complex IPs (e.g. ARM processor) missing in current roadmap&quot;, 2,
&quot;3. Few minor IPs missing in current roadmap&quot;,3,
&quot;4. All IPs are in roadmap but one or more need schedule pull-in&quot;,4,
&quot;5. No IP gap; either no IP required or all are aligned with customer schedule&quot;,5
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP Match (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Match_Weight__c</fullName>
        <formula>12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>12</inlineHelpText>
        <label>IP Match (Weight)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Match_Weighted_Score__c</fullName>
        <formula>IP_Match_Score__c * IP_Match_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP Match (Weighted Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Match__c</fullName>
        <inlineHelpText>1 =  Very High IP gaps, 2 = Many IP Gaps, 3 = some IP Gaps, 4 = few IP gaps, 5 = No IP Gaps</inlineHelpText>
        <label>IP Match</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. IPs are not aligned with our current plan/target applications</fullName>
                </value>
                <value>
                    <fullName>2. Few key complex IPs (e.g. ARM processor) missing in current roadmap</fullName>
                </value>
                <value>
                    <fullName>3. Few minor IPs missing in current roadmap</fullName>
                </value>
                <value>
                    <fullName>4. All IPs are in roadmap but one or more need schedule pull-in</fullName>
                </value>
                <value>
                    <fullName>5. No IP gap; either no IP required or all are aligned with customer schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margins_Score__c</fullName>
        <formula>Case(TEXT(Margins__c), &quot;1. &lt;20%&quot;,1,
&quot;2. 20%-25%&quot;, 2,
&quot;3. 25%-30%&quot;,3,
&quot;4. 30%-35%&quot;,4,
&quot;5. &gt;35%&quot;,5,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margins (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margins_Weight__c</fullName>
        <formula>12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>12</inlineHelpText>
        <label>Margins (Weight)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margins_Weighted_Score__c</fullName>
        <formula>Margins_Score__c * Margins_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margins (Weighted Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margins__c</fullName>
        <inlineHelpText>1 = &lt;20%, 2 = &lt;25%, 3 = &lt;30%, 4 = &lt; 35%, 5 = &gt;35%</inlineHelpText>
        <label>Margins</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. &lt;20%</fullName>
                </value>
                <value>
                    <fullName>2. 20%-25%</fullName>
                </value>
                <value>
                    <fullName>3. 25%-30%</fullName>
                </value>
                <value>
                    <fullName>4. 30%-35%</fullName>
                </value>
                <value>
                    <fullName>5. &gt;35%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Leadership_Score__c</fullName>
        <formula>Case(TEXT( Market_Leadership__c ),
&quot;1. New Entrant&quot;,1,
&quot;2. Small Player&quot;, 2,
&quot;3. Key Player&quot;,3,
&quot;4. Top 3&quot;,4,
&quot;5. Market Leader&quot;,5,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Leadership (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Leadership_Weight__c</fullName>
        <formula>8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>8</inlineHelpText>
        <label>Market Leadership (Weight)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Leadership_Weighted_Score__c</fullName>
        <formula>Market_Leadership_Score__c * Market_Leadership_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Leadership (Weighted Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Leadership__c</fullName>
        <inlineHelpText>Market leader has greater chance of success.

1 = new, 2 = a small player, 3 = key player, 4 = a leader, 5 = the undisputed leader (must have)</inlineHelpText>
        <label>Market Leadership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. New Entrant</fullName>
                </value>
                <value>
                    <fullName>2. Small Player</fullName>
                </value>
                <value>
                    <fullName>3. Key Player</fullName>
                </value>
                <value>
                    <fullName>4. Top 3</fullName>
                </value>
                <value>
                    <fullName>5. Market Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity ScoreCards</relationshipLabel>
        <relationshipName>Opportunity_ScoreCards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Other_Business_Potential_Score__c</fullName>
        <formula>Case(TEXT( Other_Business_Potential__c ),
&quot;1 = None&quot;,1,
&quot;2 = Some&quot;, 2,
&quot;3 = Good&quot;,3,
&quot;4 = A lot&quot;,4,
&quot;5 = Flood gates open&quot;,5,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Business Potential (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Business_Potential_Weight__c</fullName>
        <formula>8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>8</inlineHelpText>
        <label>Other Business Potential (Weight)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Business_Potential_Weighted_Score__c</fullName>
        <formula>Other_Business_Potential_Score__c * Other_Business_Potential_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Business Potential(Weighted Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Business_Potential__c</fullName>
        <inlineHelpText>Can we leverage 14nm to win other business (e.g. 28nm, 40nm, ...)?

1 = None, 2 =  Some, 3 = Good, 4 = A lot, 5 = Flood gates open</inlineHelpText>
        <label>Other Business Potential</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 = None</fullName>
                </value>
                <value>
                    <fullName>2 = Some</fullName>
                </value>
                <value>
                    <fullName>3 = Good</fullName>
                </value>
                <value>
                    <fullName>4 = A lot</fullName>
                </value>
                <value>
                    <fullName>5 = Flood gates open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pipeline_Cleaning_Value_Friendliness__c</fullName>
        <inlineHelpText>Willingness and able to work through initial &apos;kinks&apos; on our PDK, design flow, etc. &amp; help fab bring-up.</inlineHelpText>
        <label>Pipeline Cleaning Value/Friendliness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Will complaint loundly if any bugs</fullName>
                </value>
                <value>
                    <fullName>2. Expect very little bugs</fullName>
                </value>
                <value>
                    <fullName>3. Can tolerate moderate amount of issues if not schedule impact</fullName>
                </value>
                <value>
                    <fullName>4. Willing to work through some issues with us if no critical milestones are impacted</fullName>
                </value>
                <value>
                    <fullName>5. Very patient and willing to work through any issues with us despite schedule impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pipeline_Cleaning_Value_Frnd_All_Score__c</fullName>
        <formula>Pipeline_Cleaning_Value_Frnd_Score__c * Pipeline_Cleaning_Value_Frnd_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Cleaning Value/Frnd (All Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipeline_Cleaning_Value_Frnd_Score__c</fullName>
        <formula>Case(
TEXT( Pipeline_Cleaning_Value_Friendliness__c ),
&quot;1. Will complaint loundly if any bugs&quot;,1,
&quot;2. Expect very little bugs&quot;, 2,
&quot;3. Can tolerate moderate amount of issues if not schedule impact&quot;,3,
&quot;4. Willing to work through some issues with us if no critical milestones are impacted&quot;,4,
&quot;5. Very patient and willing to work through any issues with us despite schedule impact&quot;,5,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Cleaning Value/Frnd (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipeline_Cleaning_Value_Frnd_Weight__c</fullName>
        <formula>12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>12</inlineHelpText>
        <label>Pipeline Cleaning Value/Frnd (Weight)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revised_Customer_Qual2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revised Customer Qual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Strategic_Existing_Cust_Score__c</fullName>
        <formula>IF(AND(ISPICKVAL(Strategic_Existing_Customer__c,&quot;New&quot;),CONTAINS(Customer_Service_Level_CSL__c ,&quot;ROW&quot;)) , 1,
IF(AND(ISPICKVAL(Strategic_Existing_Customer__c,&quot;Existing&quot;),CONTAINS(Customer_Service_Level_CSL__c ,&quot;ROW&quot;)) , 2,
IF(AND(ISPICKVAL(Strategic_Existing_Customer__c,&quot;New&quot;),CONTAINS(Customer_Service_Level_CSL__c ,&quot;KC&quot;)) , 3,
IF(AND(ISPICKVAL(Strategic_Existing_Customer__c,&quot;Existing&quot;),CONTAINS(Customer_Service_Level_CSL__c ,&quot;KC&quot;)) , 4,IF(CONTAINS(Customer_Service_Level_CSL__c ,&quot;CDM&quot;),5,0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic/Existing Customer (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Strategic_Existing_Cust_Weight__c</fullName>
        <formula>8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>8</inlineHelpText>
        <label>Strategic/Existing Customer (Weight)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Strategic_Existing_Cust_Weighted_Score__c</fullName>
        <formula>Strategic_Existing_Cust_Score__c * Strategic_Existing_Cust_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic/Existing Cust.(Weighted Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Strategic_Existing_Customer__c</fullName>
        <inlineHelpText>ROW New  1,ROW  Existing 2, KC New 3,KC Existing 4, CDM New 5, CDM  Existing 5;
ROW = Rest of World; KC = Key customer; CDM = Collaborative Device Mfg.</inlineHelpText>
        <label>Strategic/Existing Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>Already_Engaged_with_SEC_Score__c + 
Decision_Timeframe_Score__c + 
Design_Win_Revenue_Score__c + 
Funding_Resource_Scor__c + 
IP_Match_Score__c + 
Margins_Score__c + 
Market_Leadership_Score__c + 
Other_Business_Potential_Score__c + 
Pipeline_Cleaning_Value_Frnd_Score__c + 
Strategic_Existing_Cust_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Weight__c</fullName>
        <formula>Already_Engaged_with_SEC_Weighted__c + 
Decision_Timeframe_Weight__c + 
Design_Win_Revenue_Weight__c + 
Funding_Resource_Weight__c + 
IP_Match_Weight__c + 
Margins_Weight__c + 
Market_Leadership_Weight__c + 
Other_Business_Potential_Weight__c + 
Pipeline_Cleaning_Value_Frnd_Weight__c + 
Strategic_Existing_Cust_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Opportunity ScoreCard</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>ScoreCard No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity ScoreCards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>